Adding some autolayout constraints in the storyboard so that the arbitrack button always shows
The camera view however remains 640:480

--- a/KudanCV-Demo-iOS/Base.lproj/Main.storyboard
+++ b/KudanCV-Demo-iOS/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad9_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,42 +18,25 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GCJ-M0-93N">
-                                <rect key="frame" x="64" y="272" width="640" height="480"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="480" id="MmQ-8N-C8Y"/>
-                                    <constraint firstAttribute="width" constant="640" id="aMg-tt-tiV"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Arbitrack label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4SS-33-6pY">
-                                <rect key="frame" x="64" y="228" width="111" height="34"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GCJ-M0-93N">
+                                <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                <color key="textColor" red="0.069522074776944498" green="1" blue="0.080939173917833562" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lk6-GU-PIV">
-                                <rect key="frame" x="84" y="292" width="47" height="22"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lk6-GU-PIV">
+                                <rect key="frame" x="9" y="8" width="281" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Trackable label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3a-CI-9Em">
-                                <rect key="frame" x="64" y="199" width="116" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                <color key="textColor" red="1" green="0.89294681889033567" blue="0.084430846750296107" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e9U-VJ-6Km">
-                                <rect key="frame" x="64" y="752" width="640" height="80"/>
+                                <rect key="frame" x="0.0" y="687" width="1024" height="81"/>
                                 <color key="backgroundColor" red="0.61775516139999997" green="0.34780377979999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="A4L-e2-Hv4"/>
-                                    <constraint firstAttribute="width" constant="640" id="RmK-iM-EqB"/>
+                                    <constraint firstAttribute="height" constant="81" id="AAq-Mi-MNF"/>
                                 </constraints>
                                 <state key="normal" title="Arbitrack button">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -62,15 +45,26 @@
                                     <action selector="arbitrackAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O5S-j6-niK"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Trackable label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3a-CI-9Em">
+                                <rect key="frame" x="9" y="42" width="116" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <color key="textColor" red="1" green="0.89294681889033567" blue="0.084430846750296107" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Arbitrack label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4SS-33-6pY">
+                                <rect key="frame" x="14" y="71" width="111" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <color key="textColor" red="0.069522074776944498" green="1" blue="0.080939173917833562" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="GCJ-M0-93N" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="8Ii-2p-a2p"/>
-                            <constraint firstItem="e9U-VJ-6Km" firstAttribute="top" secondItem="GCJ-M0-93N" secondAttribute="bottom" id="Jen-1j-rYp"/>
-                            <constraint firstItem="GCJ-M0-93N" firstAttribute="top" secondItem="Lk6-GU-PIV" secondAttribute="top" constant="-20" id="jGX-Kw-6wU"/>
-                            <constraint firstItem="e9U-VJ-6Km" firstAttribute="leading" secondItem="GCJ-M0-93N" secondAttribute="leading" id="kNo-4o-eFB"/>
-                            <constraint firstItem="Lk6-GU-PIV" firstAttribute="leading" secondItem="GCJ-M0-93N" secondAttribute="leading" constant="20" id="lVB-yb-5oG"/>
-                            <constraint firstItem="GCJ-M0-93N" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="q6p-JB-RBl"/>
+                            <constraint firstAttribute="trailing" secondItem="e9U-VJ-6Km" secondAttribute="trailing" id="D1K-97-iGy"/>
+                            <constraint firstItem="e9U-VJ-6Km" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="O1n-7g-fzm"/>
+                            <constraint firstAttribute="bottom" secondItem="e9U-VJ-6Km" secondAttribute="bottom" id="wKY-t7-Xya"/>
                         </constraints>
                     </view>
                     <connections>
